test/expected/explain_pri.out
explain int &*x
             ^
14: error: pointer to reference is illegal; did you mean "*&"?
